[gd_scene load_steps=8 format=3 uid="uid://bl1swj81khre3"]

[ext_resource type="Script" path="res://scenes/menus/main_menu/butterfly_button.gd" id="1_yqhb2"]
[ext_resource type="FontFile" uid="uid://b5kqacgxl45d2" path="res://assets/ui/fonts/Habbo.ttf" id="1_yrt7f"]
[ext_resource type="Texture2D" uid="uid://dkkr81jtl1eql" path="res://assets/ui/ui_sprites/butterfly_icon.png" id="2_2fxtx"]
[ext_resource type="PackedScene" uid="uid://r5otg86c1mlc" path="res://scenes/menus/main_menu/helper_buddy.tscn" id="3_21p75"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2vg3a"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.658824, 0.658824, 0.658824, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.976471, 0.945098, 0.647059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wo3k"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.658824, 0.658824, 0.658824, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.988235, 0.988235, 0.988235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f4otr"]
content_margin_left = 4.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.988235, 0.988235, 0.988235, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqhb2")

[node name="ButterflyButton" type="Button" parent="."]
custom_minimum_size = Vector2(120, 30)
layout_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_pressed_color = Color(0.988235, 0.988235, 0.988235, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = -38
theme_override_fonts/font = ExtResource("1_yrt7f")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_2vg3a")
theme_override_styles/hover = SubResource("StyleBoxFlat_6wo3k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_6wo3k")
theme_override_styles/normal = SubResource("StyleBoxFlat_f4otr")
text = "????"
icon = ExtResource("2_2fxtx")
alignment = 2
expand_icon = true

[node name="HelperBuddyContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_right = 75.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_left = -50
theme_override_constants/margin_top = -140

[node name="HelperBuddy" parent="HelperBuddyContainer" instance=ExtResource("3_21p75")]
layout_mode = 2

[connection signal="pressed" from="ButterflyButton" to="." method="_on_butterfly_button_pressed"]

[editable path="HelperBuddyContainer/HelperBuddy"]
